--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
             build_flags: "PLATFORMS='macosx iphonesimulator' CONFIGS='static shared' LANGUAGES='cpp swift'"
             # Remove rfilter swift/Ice/operations once #3286 is fixed
             # swift/Ice/udp doesn't work on CI
-            test_flags: "--languages='cpp,swift' --platform=iphonesimulator --controller-app --rfilter=swift/Ice/operations --rfilter=swift/Ice/udp"
+            test_flags: "--languages='cpp,swift' --platform=iphonesimulator --controller-app --filter=swift/Ice/udp"
             build_cpp_and_python: true
 
           # Static builds
