Drop ICE_BIN_DIST

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -21,7 +21,7 @@ $(foreach t, $(slice_translators), $(eval $(call create-translator-project,$(cal
 
 include $(foreach p,$(load_first),src/$p/Makefile.mk)
 include $(filter-out $(foreach p,$(load_first),%/src/$p/Makefile.mk),$(shell find $(lang_srcdir)/src -name Makefile.mk))
-$(call make-projects,$(projects),make-cpp-src-project,,$(filter all cpp,$(ICE_BIN_DIST)))
+$(call make-projects,$(projects),make-cpp-src-project,,)
 
 ifeq ($(os),Darwin)
 $(call make-xcframeworks)
