--- a/java/settings.gradle
+++ b/java/settings.gradle
@@ -1,26 +1,24 @@
 // Copyright (c) ZeroC, Inc.
 
-if(!System.env.ICE_BIN_DIST?.split(" ").find{ it == 'all' || it.contains('java')}) {
-    // Main source
-    include ':ice'
-    project(':ice').projectDir = new File('src/com.zeroc.ice')
-    include ':icediscovery'
-    project(':icediscovery').projectDir = new File('src/com.zeroc.icediscovery')
-    include ':icelocatordiscovery'
-    project(':icelocatordiscovery').projectDir = new File('src/com.zeroc.icelocatordiscovery')
-    include ':icebt'
-    project(':icebt').projectDir = new File('src/com.zeroc.icebt')
-    include ':icebox'
-    project(':icebox').projectDir = new File('src/com.zeroc.icebox')
-    include ':glacier2'
-    project(':glacier2').projectDir = new File('src/com.zeroc.glacier2')
-    include ':icestorm'
-    project(':icestorm').projectDir = new File('src/com.zeroc.icestorm')
-    include ':icegrid'
-    project(':icegrid').projectDir = new File('src/com.zeroc.icegrid')
-    include ':IceGridGUI'
-    project(':IceGridGUI').projectDir = new File('src/IceGridGUI')
-}
+// Source projects
+include ':ice'
+project(':ice').projectDir = new File('src/com.zeroc.ice')
+include ':icediscovery'
+project(':icediscovery').projectDir = new File('src/com.zeroc.icediscovery')
+include ':icelocatordiscovery'
+project(':icelocatordiscovery').projectDir = new File('src/com.zeroc.icelocatordiscovery')
+include ':icebt'
+project(':icebt').projectDir = new File('src/com.zeroc.icebt')
+include ':icebox'
+project(':icebox').projectDir = new File('src/com.zeroc.icebox')
+include ':glacier2'
+project(':glacier2').projectDir = new File('src/com.zeroc.glacier2')
+include ':icestorm'
+project(':icestorm').projectDir = new File('src/com.zeroc.icestorm')
+include ':icegrid'
+project(':icegrid').projectDir = new File('src/com.zeroc.icegrid')
+include ':IceGridGUI'
+project(':IceGridGUI').projectDir = new File('src/IceGridGUI')
 
 // Tests
 include ':test'
