--- a/.github/actions/build-slice-compiler/action.yml
+++ b/.github/actions/build-slice-compiler/action.yml
@@ -12,11 +12,11 @@ runs:
     - name: Build on Windows
       if: runner.os == 'Windows'
       run: |
-        MSBuild msbuild/ice.proj /p:Configuration=Release /p:Platform=x64 /t:${{ inputs.compiler-name }}
+        MSBuild cpp/msbuild/ice.proj /p:Configuration=Release /p:Platform=x64 /t:${{ inputs.compiler-name }}
       shell: cmd
 
     - name: Build on Linux/macOS
       if: runner.os != 'Windows'
       run: |
-        make OPTIMIZE=yes V=1 ${{ inputs.compiler-name }}
+        make -C cpp OPTIMIZE=yes V=1 ${{ inputs.compiler-name }}
       shell: bash
