Fix command for building Windows compilers

--- a/.github/actions/build-slice-compiler/action.yml
+++ b/.github/actions/build-slice-compiler/action.yml
@@ -12,7 +12,8 @@ runs:
     - name: Build on Windows
       if: runner.os == 'Windows'
       run: |
-        MSBuild cpp/msbuild/ice.proj /p:Configuration=Release /p:Platform=x64 /t:${{ inputs.compiler-name }}
+        nuget restore cpp/msbuild/ice.sln
+        MSBuild cpp/msbuild/ice.sln /p:Configuration=Release /p:Platform=x64 /t:${{ inputs.compiler-name }}
       shell: cmd
 
     - name: Build on Linux/macOS
