--- a/.github/workflows/build-pip-packages.yml
+++ b/.github/workflows/build-pip-packages.yml
@@ -6,24 +6,21 @@ on:
 
 jobs:
   build-python-packages:
-    runs-on: ${{ matrix.os }}
+
     strategy:
       matrix:
-        os: [macos-latest, windows-latest]
         include:
-          - os: windows-latest
-            python-version: '3.13'
           - os: macos-latest
-            python-version: '3.13'
+          - os: windows-latest
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
+      - name: Setup Dependencies
+        uses: ./.github/actions/setup-dependencies
 
       - name: Install Build Dependencies
         run: |
