--- a/csharp/msbuild/zeroc.ice.net.props
+++ b/csharp/msbuild/zeroc.ice.net.props
@@ -8,6 +8,13 @@
         <IceSoVersion>38</IceSoVersion>
         <IceHome>$(MSBuildThisFileDirectory)..</IceHome>
         <IceAssembliesDir>$(IceHome)\lib</IceAssembliesDir>
-        <IceToolsPath>$(IceHome)\tools</IceToolsPath>
+
+        <!-- Internal properties used to compute the slicec-cs compiler location for the current platform. -->
+        <IceOSName Condition="$([MSBuild]::IsOSPlatform('Linux'))">linux</IceOSName>
+        <IceOSName Condition="$([MSBuild]::IsOSPlatform('Windows'))">windows</IceOSName>
+        <IceOSName Condition="$([MSBuild]::IsOSPlatform('OSX'))">macos</IceOSName>
+        <IceOSArch
+        >$([System.Runtime.InteropServices.RuntimeInformation]::OSArchitecture.ToString().ToLower())</IceOSArch>
+        <IceToolsPath>$(IceHome)\tools\$(IceOSName)-$(IceOSArch)</IceToolsPath>
     </PropertyGroup>
 </Project>
