--- a/.github/workflows/build-dotnet-packages.yml
+++ b/.github/workflows/build-dotnet-packages.yml
@@ -15,7 +15,7 @@ jobs:
             artifact-path: cpp/bin/Release/x64/slice2cs.*
           - os: ubuntu-24.04
             artifact-path: cpp/bin/slice2cs
-          - os: ubuntu-24.04-arm64
+          - os: ubuntu-24.04-arm
             artifact-path: cpp/bin/slice2cs
 
     runs-on: ${{ matrix.os }}
