--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -63,4 +63,7 @@ jobs:
       - name: Run Clang Tidy
         working-directory: cpp
         run: |
-          run-clang-tidy-19 -quiet
+          # Run clang-tidy on all .cpp files, excluding the generated code to speed up the check.
+          echo nproc=$(nproc)
+          shopt -s globstar
+          run-clang-tidy-19 -j$(nproc) -quiet **/!(generated)/*.cpp
