Support building 'slice2swift' on Windows platforms.

--- a/cpp/src/slice2swift/msbuild/slice2swift.vcxproj
+++ b/cpp/src/slice2swift/msbuild/slice2swift.vcxproj
@@ -20,7 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{8D237BBB-506A-4CC1-8C81-BDC2787DA88B}</ProjectGuid>
-    <RootNamespace>slice2cs</RootNamespace>
+    <RootNamespace>slice2swift</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
