--- a/.github/workflows/build-msi-package.yml
+++ b/.github/workflows/build-msi-package.yml
@@ -19,7 +19,7 @@ jobs:
           working-directory: cpp/msbuild
 
         - name: Build IceGrid GUI
-          run: gradlew dist
+          run: gradlew.bat dist
           working-directory: java
 
         - name: Build MSI
