--- a/.github/actions/build-deb-package/action.yml
+++ b/.github/actions/build-deb-package/action.yml
@@ -1,5 +1,5 @@
-name: "Build Debian Package"
-description: "Builds a Debian source package using a Docker image"
+name: "Build DEB Package"
+description: "Builds a DEB package using a Docker image"
 inputs:
   ice_version:
     description: "The ICE version to build"
@@ -18,9 +18,6 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Check out repository
-      uses: actions/checkout@v4
-
     - name: Build Docker Image
       run: docker build -f ${{ inputs.dockerfile_path }} -t ${{ inputs.docker_image }} .
       shell: bash
@@ -40,4 +37,9 @@ runs:
       uses: actions/upload-artifact@v4
       with:
         name: debian-packages-${{ inputs.os }}
-        path: output/
+        path: |
+          output/*.deb
+          output/*.dsc
+          output/*.tar.gz
+          output/*.changes
+          output/*.buildinfo
