--- a/.github/actions/build-deb-package/action.yml
+++ b/.github/actions/build-deb-package/action.yml
@@ -26,11 +26,12 @@ runs:
       run: |
         mkdir -p output
         docker run --rm \
-          -v $PWD/ice:/workspace/ice \
+          -v $PWD/../../../ice:/workspace/ice \
           -v $PWD/output:/workspace/build \
           -e ICE_VERSION=${{ inputs.ice_version }} \
           -e DEB_BUILD_OPTIONS="${{ inputs.deb_build_options }}" \
           ice-debian-package-builder
+      working-directory: packaging/dpkg
       shell: bash
 
     - name: Upload Artifacts
@@ -43,3 +44,4 @@ runs:
           output/*.tar.gz
           output/*.changes
           output/*.buildinfo
+      working-directory: packaging/dpkg
