--- a/.github/actions/build-deb-package/action.yml
+++ b/.github/actions/build-deb-package/action.yml
@@ -19,7 +19,7 @@ runs:
   using: "composite"
   steps:
     - name: Build Docker Image
-      run: docker build --pull -f ${{ inputs.dockerfile_path }} -t ice-debian-package-builder .
+      run: docker build --pull -f ${{ inputs.dockerfile_path }} -t ice-deb-package-builder .
       shell: bash
       working-directory: packaging/dpkg
 
@@ -32,17 +32,19 @@ runs:
           -e ICE_VERSION=${{ inputs.ice_version }} \
           -e DEB_BUILD_OPTIONS="${{ inputs.deb_build_options }}" \
           --entrypoint /workspace/ice/packaging/dpkg/build-package.sh \
-          ice-debian-package-builder
+          ice-deb-package-builder
 
       shell: bash
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: debian-packages-${{ inputs.os }}
+        name: deb-packages-${{ inputs.os }}
         path: |
           ${{RUNNER_TEMP}}/build/*.deb
+          ${{RUNNER_TEMP}}/build/*.ddeb
           ${{RUNNER_TEMP}}/build/*.dsc
+          ${{RUNNER_TEMP}}/build/*.tar.xz
           ${{RUNNER_TEMP}}/build/*.tar.gz
           ${{RUNNER_TEMP}}/build/*.changes
           ${{RUNNER_TEMP}}/build/*.buildinfo
